--- a/ghost.html
+++ b/ghost.html
@@ -34,6 +34,21 @@
             display: block;
             color:red;
         }
+
+        button{
+            border-radius: 10px;
+            padding: 10px 20px;
+            font-size: 40px;
+            color: rgb(26, 24, 24);
+            border-color: cyan;
+            background-color: cyan;
+            box-shadow: 0 0 5px cyan,0 0 25px cyan;
+            margin-left: 948px;
+            margin-top: 20px;
+        }
+        button:hover{
+            box-shadow: 0 0 5px cyan,0 0 25px cyan,0 0 50px cyan,0 0 100px cyan,0 0 200px cyan;
+        }
     </style>
     <body>
         <div class="ghost">
@@ -43,11 +58,13 @@
         </div>
         <div class="patch"></div>
         <div class="text">
-            BOOOOOO!!!!
+            BOOOOOO!!!! <br>
+            
         </div>
+        <button>press</button>
     </body>
 
 
 
-
+        
 </html>
